# raft

./: .gitignore  README.md  app.py  classification_override.py  classifier.py  create_schema.sql  embeddings.py  generate_embeddings.py  generator.py  load_chunks.py  pyproject.toml  readme_api.md  readme_generator.md  readme_retriever.md  retrievers.py  test_citation_scope.py  test_colon_type.py  test_emb_result.py  test_embeddings.py  test_generator_smoke.py  test_incomplete_quote.py  test_retrievers_smoke.py  test_routing_contract.py  ui.py  ui_simple.py
deploy/: .env.example  README_DEPLOY.md  docker-compose.yml
deploy/api/: Dockerfile
deploy/db-init/: restore.sh
deploy/nginx/: nginx.conf
deploy/repo-sync/: entrypoint.sh
deploy/ui/: Dockerfile
generator/: __init__.py  base.py  citation_validator.py  context_builder.py  generator.py  llm_client.py  policy.py
generator/prompts/: __init__.py  listing.py  navigation.py  quoted_answer.py  strict_citation.py  summary.py
retrievers/: __init__.py  base.py  citation.py  definition.py  general.py  navigation.py  overview_purpose.py  penalties.py  permission_disclosure.py  procedural.py  registry.py  scope.py  semantic.py  utils.py
